trunk/Archive/bbb5318e2ec1527b71703481c8628d42-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:76:1: error: expected ')' before 'int'
 int main ( int argc, char** argv ) {
 ^
main.cpp:76:1: error: expected initializer before 'int'
